# nanograph

./: .gitignore  CLAUDE.md  flake.nix  package-lock.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/nanograph/: Cargo.toml
crates/nanograph-cli/: Cargo.toml
crates/nanograph-cli/src/: config.rs  main.rs  metadata.rs  schema_ops.rs  tests.rs
crates/nanograph-cli/tests/: bug_regressions.rs  display_formats.rs  embed_command.rs  load_modes_and_export.rs  revops_admin_and_cdc.rs  schema_analysis.rs
crates/nanograph-ffi/: Cargo.toml
crates/nanograph-ffi/swift/Tests/NanoGraphTests/: DatabaseTests.swift
crates/nanograph-ts/: Cargo.toml  package.json
crates/nanograph-ts/__test__/: index.spec.mjs
crates/nanograph/benches/common/: mod.rs
crates/nanograph/src/: types.rs
crates/nanograph/src/plan/: node_scan.rs  planner.rs
crates/nanograph/src/store/: database.rs  lance_io.rs  migration.rs  mod.rs  txlog.rs
crates/nanograph/src/store/database/: cdc.rs  maintenance.rs  persist.rs  tests.rs
crates/nanograph/src/store/loader/: merge.rs
crates/nanograph/tests/: e2e.rs  index_perf.rs  schema_migration.rs  write_amp_perf.rs
docs/: README.md
docs/dev/: benchmarks.md  release-checklist.md  release-notes-v1.1.1.md  swift-sdk.md  typescript-sdk.md
docs/user/: cli-reference.md  config.md  context-graph-example.md  quick-start.md  revops.md  starwars-example.md
examples/revops/: README.md  revops.jsonl
tests/cli/scenarios/: maintenance.sh
tools/swift-package/: render_package.sh
