[package]
name = "nanograph"
version = "0.9.0"
edition = "2024"
description = "Embedded typed property graph database. Schema-as-code, compile-time validated, Arrow-native."
repository = "https://github.com/nanograph/nanograph"
license = "MIT"
keywords = ["graph", "database", "arrow", "datafusion", "embedded"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[dependencies]
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-cast = { workspace = true }
arrow-ord = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-common = { workspace = true }
lance = { workspace = true }
lance-index = { workspace = true }
lance-linalg = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
