[package]
name = "nanograph"
version = "1.1.1"
edition = "2024"
description = "Embedded typed property graph database. Schema-as-code, compile-time validated, Arrow-native."
repository = "https://github.com/nanograph/nanograph"
license = "MIT"
keywords = ["graph", "database", "arrow", "datafusion", "embedded"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[dependencies]
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-cast = { workspace = true }
arrow-ord = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
lance = { workspace = true }
lance-file = { workspace = true }
lance-index = { workspace = true }
lance-linalg = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "query_lookup"
harness = false

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "result_transport"
harness = false
